# SecretsManager

./: .gitignore  LICENSE  README.md  generate_key.py  main.py  pyproject.toml  requirements.txt
app/: settings.py  utils.py
app/assets/: index.html
app/assets/scripts/: base.js  handlers.js
app/assets/styles/: style.css
app/sql/: create_tables.sql
app/src/: managers.py  storages.py
secrets_project/: manage.py
secrets_project/secrets_manager/: admin.py  apps.py  models.py  urls.py  views.py
secrets_project/secrets_manager/migrations/: 0001_initial.py
secrets_project/secrets_manager/templatetags/: style_filter.py
secrets_project/secrets_project/: asgi.py  settings.py  urls.py  wsgi.py
secrets_project/templates/: base.html
secrets_project/templates/secrets_manager/: authenticate.html  logout.html  secret-list.html
secrets_project/templates/snippets/: check-field.html  form-errors.html  input-field.html
