[tool.poetry]
name = "secretsmanager"
version = "0.1.0"
description = "Handy tool to manage your passwords"
authors = ["Denys Zaluzhnyi <denys.zaluzhnyi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
